--- a/.github/workflows/chatflows.yml
+++ b/.github/workflows/chatflows.yml
@@ -28,7 +28,7 @@ jobs:
           WALLET_SECRET: ${{ secrets.WALLET_SECRET }}
         run: |
           sudo --preserve-env=TNAME --preserve-env=EMAIL --preserve-env=WORDS --preserve-env=WALLET_SECRET \
-          poetry run pytest -sv tests/sals/automated_chatflows/test_threebot_deployer.py --cov=jumpscale --cov-report=xml
+          poetry run pytest -sv tests/sals/automated_chatflows/test_threebot_deployer.py::ThreebotChatflows::test04_change_deployed_threebot_location --cov=jumpscale --cov-report=xml
       - name: Upload coverage to Codecov
         if: success()
         uses: codecov/codecov-action@v1
