--- a/.github/workflows/chatflows.yml
+++ b/.github/workflows/chatflows.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Gathering deps
         run: |
           sudo apt-get update
-          sudo apt-get install -y git python3-pip python3-venv python3-setuptools tmux redis restic nginx cron
+          sudo apt-get install -y git python3-pip python3-venv python3-setuptools tmux redis restic nginx cron wireguard
           sudo service redis stop
           sudo service nginx stop
           sudo pip3 install poetry
