fix: fixing job name

--- a/.github/workflows/js-sdk-check-wheel.yml
+++ b/.github/workflows/js-sdk-check-wheel.yml
@@ -12,7 +12,7 @@ on:
     branches: [ development ]
 
 jobs:
-  check the wheels:
+  chec-the-wheels:
     runs-on: ${{ matrix.os }}
     continue-on-error: ${{ matrix.experimental }}
     strategy:
