--- a/.github/workflows/Full.yml
+++ b/.github/workflows/Full.yml
@@ -1,8 +1,14 @@
-name: Frontend
+# This workflow will install Python dependencies, run tests and lint with a single version of Python
+# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
+name: js-sdk-full
+
+# on:
+#   schedule:
+#     - cron:  '0 0 * * *'
 on:
-  schedule:
-    - cron:  '0 0 * * *'
+  push:
+    branches: [ development_full_workflow ]
 
 jobs:
   build:
@@ -10,7 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          ref: development
+          ref: development_vdc_testing
       - uses: actions/setup-python@v2
         with:
           python-version: '3.8'
@@ -19,24 +25,26 @@ jobs:
       - name: Gathering deps
         run: |
           sudo apt-get update
-          sudo apt-get install -y git tmux redis restic nginx cron unzip
+          sudo apt-get install -y git tmux redis restic nginx cron wireguard unzip
           sudo service redis stop
           sudo service nginx stop
           poetry run pip3 install pytest selenium pytest-cov
-
-      - name: Install js-sdk
+      - name: Install
         run: |
           poetry install
-
       - name: Run tests
         env:
           TNAME: ${{ secrets.TNAME }}
           EMAIL: ${{ secrets.EMAIL }}
           WORDS: ${{ secrets.WORDS }}
+          WALLET_SECRET: ${{ secrets.WALLET_SECRET }}
+          SOURCE_WALLET_SECRET: ${{ secrets.WALLET_SECRET }}
+          DESTINATION_WALLET_SECRET: ${{ secrets.DESTINATION_WALLET_SECRET }}
+          FAKE_EMAIL: ${{ secrets.FAKE_EMAIL }}
+          FAKE_GITHUB_TOKEN: ${{ secrets.FAKE_GITHUB_TOKEN }}
         run: |
           sudo setcap CAP_NET_BIND_SERVICE=+eip $(which nginx)
-          poetry run pytest -sv tests/frontend/tests --cov=jumpscale --cov-report=xml
-
+          poetry run pytest tests -sv --cov=jumpscale --cov-report=xml
       - name: Upload coverage to Codecov
         if: success()
         uses: codecov/codecov-action@v1
