feature: Adding the feature requested in iss 2256
- Now js-sdk build tests should run only when a python file `*.py` changed somewhere in the project

--- a/.github/workflows/js-sdk.yml
+++ b/.github/workflows/js-sdk.yml
@@ -6,8 +6,12 @@ name: js-sdk
 on:
   push:
     branches: [ development ]
+    paths:
+    - '**.py'
   pull_request:
     branches: [ development ]
+    paths:
+    - '**.py'
 
 jobs:
   build:
