Run js-sdk build tests only when a python file changed (#2435)
* feature: Adding the feature requested in iss 2256

- Now js-sdk build tests should run only when a python file `*.py` changed somewhere in the project

* Update js-sdk.yml

--- a/.github/workflows/js-sdk.yml
+++ b/.github/workflows/js-sdk.yml
@@ -6,8 +6,18 @@ name: js-sdk
 on:
   push:
     branches: [ development ]
+    paths:
+    - '**.py'
+    - '.github/workflows/**.yml'
+    - 'pyproject.toml'
+    - 'poetry.lock'
   pull_request:
     branches: [ development ]
+    paths:
+    - '**.py'
+    - '.github/workflows/**.yml'
+    - 'pyproject.toml'
+    - 'poetry.lock'
 
 jobs:
   build:
