--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,4 +42,4 @@ build-backend = "poetry.masonry.api"
 
 [tool.pytest.ini_options]
 markers = ["integration: marks tests as integration (deselect with '-m \"not integration\"')",
-           "unittests"]
+           "unittests", "extend"]
