--- a/jumpscale/packages/vdc_dashboard/package.toml
+++ b/jumpscale/packages/vdc_dashboard/package.toml
@@ -27,6 +27,14 @@ path_dest = "/api/backup/"
 host = "0.0.0.0"
 port = 5590
 
+[[bottle_servers]]
+name = "controller"
+file_path = "bottle/controller.py"
+path_url = "/api/controller/"
+path_dest = "/api/controller/"
+host = "0.0.0.0"
+port = 5591
+
 [[servers]]
 name = "vdc_dashboard_root_proxy"
 domain = "vdc-dashboard.threefold.me"
