--- a/.github/workflows/test_fill.yml
+++ b/.github/workflows/test_fill.yml
@@ -24,6 +24,7 @@ jobs:
           sudo service nginx stop
           sudo pip3 install poetry
           sudo poetry run pip3 install pytest parameterized selenium pytest-cov
+          sudo apt install mc
       - name: Install
         run: |
           sudo poetry install
