--- a/.github/workflows/js-sdk.yml
+++ b/.github/workflows/js-sdk.yml
@@ -52,4 +52,4 @@ jobs:
           S3_SK: ${{ secrets.S3_SK }}
         run: |
           sudo --preserve-env=TNAME --preserve-env=EMAIL --preserve-env=WORDS --preserve-env=FAKE_EMAIL --preserve-env=FAKE_GITHUB_TOKEN --preserve-env=S3_URL --preserve-env=S3_BUCKET --preserve-env=S3_AK --preserve-env=S3_SK \
-          poetry run pytest tests -sv -m "unittests"
+          poetry run pytest tests/sals/vdc/test_vdc_backup.py -sv
