--- a/.github/workflows/js-sdk.yml
+++ b/.github/workflows/js-sdk.yml
@@ -36,6 +36,7 @@ jobs:
           sudo service nginx stop
           sudo pip3 install poetry
           sudo poetry run pip3 install pytest selenium
+          wget https://dl.min.io/client/mc/release/linux-amd64/mc
       - name: Install
         run: |
           sudo poetry install
