--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Install
         run: |
           sudo poetry install
+          sudo wget https://dl.min.io/client/mc/release/linux-amd64/mc
+          sudo chmod +x mc
+          sudo cp mc /bin
       - name: Run tests
         id: tests
         continue-on-error: true
@@ -43,9 +46,13 @@ jobs:
           DESTINATION_WALLET_SECRET: ${{ secrets.DESTINATION_WALLET_SECRET }}
           FAKE_EMAIL: ${{ secrets.FAKE_EMAIL }}
           FAKE_GITHUB_TOKEN: ${{ secrets.FAKE_GITHUB_TOKEN }}
+          S3_URL: ${{ secrets.S3_URL }}
+          S3_BUCKET: ${{ secrets.S3_BUCKET }}
+          S3_AK: ${{ secrets.S3_AK }}
+          S3_SK: ${{ secrets.S3_SK }}
         run: |
           sudo --preserve-env=TNAME --preserve-env=EMAIL --preserve-env=WORDS --preserve-env=WALLET_SECRET --preserve-env=SOURCE_WALLET_SECRET \
-          --preserve-env=DESTINATION_WALLET_SECRET --preserve-env=FAKE_EMAIL --preserve-env=FAKE_GITHUB_TOKEN \
+          --preserve-env=DESTINATION_WALLET_SECRET --preserve-env=FAKE_EMAIL --preserve-env=FAKE_GITHUB_TOKEN --preserve-env=S3_URL --preserve-env=S3_BUCKET --preserve-env=S3_AK --preserve-env=S3_SK \
           poetry run pytest tests -sv -m "not extend" --cov=jumpscale --cov-report=xml --ignore=tests/clients/digitalocean --ignore=tests/clients/sendgrid
       - name: Collect tokens back
         env:
