--- a/jumpscale/install/rootfs/etc/zinit/start.yaml
+++ b/jumpscale/install/rootfs/etc/zinit/start.yaml
@@ -1,5 +1,5 @@
 exec: jsng "j.servers.threebot.start_default(wait=True, local=False)"
-test: bash -c "ss -nplt | grep -v grep | grep 16000"
+test: bash -c "curl http://localhost:8989/api/heartbeat -f"
 log: stdout
 after:
   - init
