--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,1 @@
-* @xmonader @rkhamis @abom @waleedhammam @m-motawea @AhmedHanafy725
+* @xmonader @rkhamis @abom @ashraffouda @arahmanhamdy @waleedhammam @m-motawea @AhmedHanafy725 @ranatrk @OmarElawady @dmahmouali
