run tests with gevent

--- a/.github/workflows/js-sdk.yml
+++ b/.github/workflows/js-sdk.yml
@@ -5,10 +5,9 @@ name: js-sdk
 
 on:
   push:
-    branches: [ development ]
+    branches: [ development_update_gevent ]
     paths:
     - '**.py'
-    - '.github/workflows/**.yml'
     - 'pyproject.toml'
     - 'poetry.lock'
   pull_request:
