vdc controller api: disable 3bot login for swagger ui

--- a/jumpscale/packages/vdc_dashboard/package.toml
+++ b/jumpscale/packages/vdc_dashboard/package.toml
@@ -17,6 +17,8 @@ path_url = "/apidoc"
 path_location = "bottle/api/swagger/"
 index = "index.html"
 spa = false
+is_auth = false
+is_admin = false
 
 [[bottle_servers]]
 name = "main"
