--- a/.github/workflows/js-sdk.yml
+++ b/.github/workflows/js-sdk.yml
@@ -34,8 +34,8 @@ jobs:
             python-version: 3.8
             experimental: true
             name: Experimental build - latest Ubuntu
-          - python-version: 3.9
-            os: ubuntu-20.04
+          - os: ubuntu-20.04
+            python-version: 3.9
             experimental: true
             name: Experimental build - latest Python
     steps:
