VDC controller API: backup information, OpenAPI v3 spec and swagger UI (#3015)
* vdc api: add backup information endpoint

* vdc: add OpenAPI spec for controller API and swagger UI

* add README for openapi and swagger-ui

* fix examples to be under schema and fix a typo in swagger/README.md

* vdc rest openapi: try to fix api examples again

* vdc controller openapi: fix nodes and wallet examples

* vdc controller api: disable 3bot login for swagger ui

* disable is_package_authorized too

* allow auth options per location for static dirs and bottle servers

* vdc_dashboard: move auth flags from package.py to package.toml

--- a/jumpscale/packages/vdc_dashboard/package.toml
+++ b/jumpscale/packages/vdc_dashboard/package.toml
@@ -11,6 +11,16 @@ path_location = "frontend/"
 index = "index.html"
 spa = true
 
+[[static_dirs]]
+name = "swagger_ui"
+path_url = "/apidoc"
+path_location = "bottle/api/swagger/"
+index = "index.html"
+spa = false
+is_auth = false
+is_admin = false
+is_package_authorized = false
+
 [[bottle_servers]]
 name = "main"
 file_path = "bottle/deployments.py"
@@ -34,10 +44,13 @@ path_url = "/api/controller/"
 path_dest = "/api/controller/"
 host = "0.0.0.0"
 port = 5591
+is_auth = false
+is_admin = false
+is_package_authorized = false
 
 [[servers]]
 name = "vdc_dashboard_root_proxy"
-domain = "vdc-dashboard.threefold.me"
+domain = ""
 letsencryptemail = "motaweam@incubaid.com"
 includes = ["default_443.chatflows_*", "default_443.auth_*", "default_443.vdc_dashboard*"]
 
