--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ requests_unixsocket = "^0.2.0"
 protobuf = "^3.12.2"
 namecom = "^0.5.0"
 crontab = "^0.22.9"
+importlib-metadata = "^4.0.1"
 
 [tool.poetry.dev-dependencies]
 ipython = "^7.6"
