--- a/.github/workflows/js-sdk.yml
+++ b/.github/workflows/js-sdk.yml
@@ -5,7 +5,7 @@ name: js-sdk
 
 on:
   push:
-    branches: [ development_update_gevent ]
+    branches: [ development ]
     paths:
     - '**.py'
     - 'pyproject.toml'
