--- a/jumpscale/packages/vdc_dashboard/package.toml
+++ b/jumpscale/packages/vdc_dashboard/package.toml
@@ -29,6 +29,16 @@ path_dest = "/api/"
 host = "0.0.0.0"
 port = 5556
 
+[[bottle_servers]]
+name = "controller"
+file_path = "bottle/api/controller.py"
+path_url = "/api/controller"
+path_dest = "/api/controller"
+host = "0.0.0.0"
+port = 5556
+is_auth = false
+is_admin = false
+is_package_authorized = false
 
 [[servers]]
 name = "vdc_dashboard_root_proxy"
