--- a/jumpscale/install/rootfs/etc/zinit/start.yaml
+++ b/jumpscale/install/rootfs/etc/zinit/start.yaml
@@ -1,5 +1,5 @@
 exec: jsng "j.servers.threebot.start_default(wait=True, local=False)"
-test: bash -c "curl http://localhost:8989/api/heartbeat --connect-timeout 10 -f"
+test: bash -c "curl http://localhost:31000/admin/api/heartbeat --connect-timeout 10 -f"
 log: stdout
 after:
   - init
