--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ cryptography = "3.0"
 js-ng = "11.0b13"
 python = "^3.6"
 captcha = "^0.3"
-pillow = "^7.1.0"
+pillow = "^8.0"
 cryptocompare = "^0.6.4"
 certifi = "^2019.6"
 base58 = "^2.0.0"
@@ -33,6 +33,7 @@ protobuf = "^3.12.2"
 namecom = "^0.5.0"
 crontab = "^0.22.9"
 importlib-metadata = "^4.0.1"
+Pillow = "^8.0"
 
 [tool.poetry.dev-dependencies]
 ipython = "^7.6"
