fixing CI workflow issue #3110

--- a/.github/workflows/js-sdk.yml
+++ b/.github/workflows/js-sdk.yml
@@ -50,11 +50,12 @@ jobs:
           sudo apt-get install -y git python3-pip python3-venv python3-setuptools tmux redis restic nginx cron
           sudo service redis stop
           sudo service nginx stop
-          sudo pip3 install poetry
-          sudo poetry run pip3 install pytest selenium
+          pip3 install poetry
       - name: Install
         run: |
-          sudo poetry install
+          poetry config virtualenvs.in-project true
+          poetry run pip3 install pytest selenium
+          poetry install
       - name: Run tests
         env:
           TNAME: ${{ secrets.TNAME }}
@@ -63,5 +64,6 @@ jobs:
           FAKE_EMAIL: ${{ secrets.FAKE_EMAIL }}
           FAKE_GITHUB_TOKEN: ${{ secrets.FAKE_GITHUB_TOKEN }}
         run: |
+          POETRY=$(which poetry)
           sudo --preserve-env=TNAME --preserve-env=EMAIL --preserve-env=WORDS --preserve-env=FAKE_EMAIL --preserve-env=FAKE_GITHUB_TOKEN \
-          poetry run pytest tests -sv -m "unittests"
+          $POETRY run pytest tests -sv -m "unittests"
