--- a/jumpscale/packages/vdc_dashboard/package.toml
+++ b/jumpscale/packages/vdc_dashboard/package.toml
@@ -3,6 +3,7 @@ is_auth = true
 is_package_authorized = true
 is_admin = false
 frontend = "/vdc_dashboard"
+
 [[static_dirs]]
 name = "frontend"
 path_url = ""
@@ -39,12 +40,15 @@ is_package_authorized = false
 
 [[servers]]
 name = "vdc_dashboard_root_proxy"
-domain = "mazraa-dash.vdctest.grid.tf"
+domain = ""
 letsencryptemail = "motaweam@incubaid.com"
-includes = [ "default_443.chatflows_*", "default_443.auth_*", "default_443.vdc_dashboard*",]
+includes = ["default_443.chatflows_*", "default_443.auth_*", "default_443.vdc_dashboard*"]
+
 [[servers.locations]]
 name = "custom"
 type = "custom"
-custom_config = "location / {\n   rewrite ^(.+) /vdc_dashboard;\n}\n"
-
-
+custom_config = """
+location / {
+   rewrite ^(.+) /vdc_dashboard;
+}
+"""
