--- a/jumpscale/install/vdc-services/velero.yaml
+++ b/jumpscale/install/vdc-services/velero.yaml
@@ -1,5 +1,5 @@
 exec: python3 /sandbox/code/github/threefoldtech/js-sdk/jumpscale/packages/tfgrid_solutions/scripts/threebot/velero.py
 log: stdout
-oneshot: True
+oneshot: true
 after:
   - init
