Exclude the marketplace package from the admin dashboard

--- a/jumpscale/packages/marketplace/package.toml
+++ b/jumpscale/packages/marketplace/package.toml
@@ -2,6 +2,7 @@ name = "marketplace"
 ui_name = "3bot_apps"
 is_auth = false
 is_admin = false
+excluded = true
 frontend = "/marketplace"
 
 [[static_dirs]]
