--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ cryptography = "3.0"
 js-ng = "11.0b13"
 python = "^3.6"
 cryptocompare = "^0.6.4"
-certifi = "^2019.6"
+certifi = "^2021.5.30"
 base58 = "^2.0.0"
 netaddr = "^0.7.19"
 sendgrid = "^6.0"
@@ -31,6 +31,7 @@ protobuf = "^3.12.2"
 namecom = "^0.5.0"
 crontab = "^0.22.9"
 importlib-metadata = "^4.0.1"
+substrate-interface = "^0.13.8"
 
 [tool.poetry.dev-dependencies]
 ipython = "^7.6"
