--- a/.github/workflows/build_image_with_trc.yml
+++ b/.github/workflows/build_image_with_trc.yml
@@ -3,6 +3,7 @@ name: js-sdk with trc
 on:
   push:
     branches: [ development ]
+    paths: [ jumpscale/install/Dockerfile ]
 jobs:
     build-docker:
         runs-on: ubuntu-latest
