--- a/.github/workflows/build_tagged_image.yml
+++ b/.github/workflows/build_tagged_image.yml
@@ -19,7 +19,7 @@ jobs:
             password: ${{ secrets.DOCKERHUB_PASSWORD }}
             dockerfile: jumpscale/install/Dockerfile
             tags: ${{ steps.tagName.outputs.tag }}
-            build_args: BRANCH=${{ steps.tagName.outputs.tag }}
+            build_args: BRANCH=${{ steps.tagName.outputs.tag }},TRC=false
         - name: Convert Docker image to flist
           run: |
             TOKEN=$(curl -f -H "Authorization: bearer ${{secrets.ZEROHUB_TOKEN}}" https://itsyou.online/v1/oauth/jwt/refresh)
