--- a/.github/workflows/build_vdc_image.yml
+++ b/.github/workflows/build_vdc_image.yml
@@ -3,6 +3,8 @@ name: js-sdk with trc and vdc dependencies
 on:
   push:
     branches: [ development ]
+    paths: [ jumpscale/install/Dockerfile.vdc ]
+
 jobs:
     build-docker:
         runs-on: ubuntu-latest
