editing the vdc image build paths to match correct Dockerfile

--- a/.github/workflows/build_vdc_image.yml
+++ b/.github/workflows/build_vdc_image.yml
@@ -3,7 +3,7 @@ name: js-sdk with trc and vdc dependencies
 on:
   push:
     branches: [ development ]
-    paths: [ jumpscale/install/Dockerfile ]
+    paths: [ jumpscale/install/Dockerfile.vdc ]
 jobs:
     build-docker:
         runs-on: ubuntu-latest
