--- a/.github/workflows/build_tagged_image.yml
+++ b/.github/workflows/build_tagged_image.yml
@@ -9,7 +9,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
         - uses: actions/checkout@v2
-        - uses: olegtarasov/get-tag@v2 # getting tagname
+        - uses: olegtarasov/get-tag@master # getting tagname
           id: tagName
         - uses: docker/build-push-action@v1
           with:
