--- a/.github/workflows/black-docstr.yml
+++ b/.github/workflows/black-docstr.yml
@@ -8,9 +8,9 @@ jobs:
         - uses: actions/checkout@v2
         - name: Install dependencies
           run: |
-            sudo apt-get update 
+            sudo apt-get update
             sudo apt-get install -y git python3-pip
-            sudo pip3 install black==19.10b0 docstr-coverage
+            sudo pip3 install black==22.10.0 docstr-coverage
             git fetch --no-tags --prune --depth=1 origin +refs/heads/*:refs/remotes/origin/*
         - name: Running black and docstr-coverage check
           run: |
