--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ stellar-sdk = "^8.1.0"
 pypng = "^0.0.20"
 pyqrcode = "^1.2.1"
 beaker = "^1.11.0"
-certbot-nginx = "1.5.0"
+certbot-nginx = "^1.31.0"
 requests_unixsocket = "^0.2.0"
 protobuf = "^3.12.2"
 namecom = "^0.5.0"
